--- a/app/src/main/res/layout/activity_paivakirja.xml
+++ b/app/src/main/res/layout/activity_paivakirja.xml
@@ -6,4 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Paivakirja">
 
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Päivä on "
+        tools:layout_editor_absoluteX="176dp"
+        tools:layout_editor_absoluteY="116dp" />
+
+    <CalendarView
+        android:id="@+id/calendarView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="28dp"
+        tools:layout_editor_absoluteY="25dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
