--- a/app/src/main/res/layout/activity_paivakirja.xml
+++ b/app/src/main/res/layout/activity_paivakirja.xml
@@ -14,7 +14,7 @@
         tools:layout_editor_absoluteX="176dp"
         tools:layout_editor_absoluteY="116dp" />
 
-    <CalendarView
+    <CalendarView2
         android:id="@+id/calendarView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
