--- a/app/src/main/res/layout/activity_profile_1.xml
+++ b/app/src/main/res/layout/activity_profile_1.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView5"
+        android:id="@+id/user"
         android:layout_width="176dp"
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
@@ -38,7 +38,7 @@
         android:layout_marginStart="16dp"
         android:ems="10"
         android:inputType="textPersonName"
-        app:layout_constraintStart_toEndOf="@+id/textView5"
+        app:layout_constraintStart_toEndOf="@+id/user"
         tools:layout_editor_absoluteY="97dp"
         android:autofillHints="" />
 
