--- a/app/src/main/res/layout/activity_paivakirja.xml
+++ b/app/src/main/res/layout/activity_paivakirja.xml
@@ -6,10 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".Paivakirja">
 
-    <CalendarView
-        android:id="@+id/calendarView"
+     <Button
+        android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="30dp"
-        tools:layout_editor_absoluteY="42dp" />
+        android:layout_marginEnd="136dp"
+        android:layout_marginRight="136dp"
+        android:layout_marginBottom="243dp"
+        android:text="Näe mieliala"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/text_View_dataPoints"
+        app:layout_constraintTop_toBottomOf="@+id/text_View_dataPoints" />
+
+    <ListView
+        android:id="@+id/text_View_dataPoints"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginTop="110dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginRight="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
