--- a/app/src/main/res/layout/activity_date_layout.xml
+++ b/app/src/main/res/layout/activity_date_layout.xml
@@ -7,16 +7,24 @@
     tools:context=".date_layout">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="164dp"
-        android:layout_height="50dp"
+        android:id="@+id/paivaView"
+        android:layout_width="0dp"
+        android:layout_height="84dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/p_iv"
-        android:textSize="30sp"
+        android:textSize="50sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ListView
+        android:id="@+id/dayData"
+        android:layout_width="0dp"
+        android:layout_height="453dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
