--- a/app/src/main/res/layout/activity_paivakirja.xml
+++ b/app/src/main/res/layout/activity_paivakirja.xml
@@ -8,10 +8,10 @@
 
     <CalendarView
         android:id="@+id/calendarView"
-        android:layout_width="413dp"
-        android:layout_height="71dp"
+        android:layout_width="409dp"
+        android:layout_height="319dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="468dp"
+        android:layout_marginTop="340dp"
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,17 +23,18 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="128dp"
+        android:layout_marginBottom="16dp"
         android:onClick="onTestButtonClick"
         android:text="Profiiliin"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <ListView
         android:id="@+id/datapointsView"
-        android:layout_width="440dp"
-        android:layout_height="335dp"
+        android:layout_width="430dp"
+        android:layout_height="252dp"
         android:layout_marginTop="4dp"
         android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,10 +44,10 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="169dp"
-        android:layout_height="28dp"
-        android:layout_marginStart="48dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="211dp"
+        android:layout_height="38dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="20dp"
         android:text="Mielialojen keskiarvo:"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -57,9 +58,9 @@
         android:layout_width="89dp"
         android:layout_height="59dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="36dp"
-        android:textSize="40sp"
+        android:layout_marginTop="12dp"
         android:text="TextView"
+        android:textSize="40sp"
         app:layout_constraintStart_toEndOf="@+id/textView"
         app:layout_constraintTop_toBottomOf="@+id/datapointsView" />
 
